--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,27 @@
 .qr-component {
   background-color: #ffffff;
-  width: 300px;
+  max-width: 25%;
   border-radius: 3%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding: 20px 20px 20px 20px;
+  padding: 1.2rem 1.2rem 1.2rem 1.2rem;
 }
 
 img {
-  width: 100%;
-  height: 300px;
+  max-width: 100%;
   border-radius: 3%;
   margin: 0 0 0 0;
 }
 
-section {
+main {
   background-color: hsl(212, 45%, 89%);
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
 }
 
 html,
@@ -33,22 +31,25 @@ body {
 }
 
 h1 {
-  padding-left: 7px;
-  padding-right: 7px;
-  margin-bottom: 0px;
+  margin-top: 0.7rem;
+  margin-left: 0.7rem;
+  margin-right: 0.7rem;
+  margin-bottom: 0rem;
   font-weight: 700;
   font-family: 'Rubik', sans-serif;
   color: hsl(218, 44%, 22%);
   text-align: center;
-  font-size: 20px;
+  font-size: 1.3rem;
 }
 
 p {
-  padding-left: 7px;
-  padding-right: 7px;
   font-weight: 400;
   font-family: 'Rubik', sans-serif;
   color: hsl(220, 15%, 55%);
   text-align: center;
-  font-size: 15px;
+  font-size: 1rem;
+  margin-top: 0.7rem;
+  margin-left: 0.7rem;
+  margin-right: 0.7rem;
+  margin-bottom: 0.7rem;
 }
