--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,17 @@
   justify-content: center;
   padding: 1.2rem 1.2rem 1.2rem 1.2rem;
 }
+@media only screen and (max-width: 1000px) {
+  .qr-component {
+    max-width: 50%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .qr-component {
+    max-width: 90%;
+  }
+}
 
 img {
   max-width: 100%;
